@@ -5,25 +5,25 @@ DIST snakeoil-0.5.2.tar.bz2 151814 SHA256 ede87f5dcfc29c6b5ec0ead3e07533b0ed1b37
 DIST snakeoil-0.5.3.tar.bz2 148449 SHA256 564871e2ff9b6f55b15bd8b1fb18be31483dc4dc2c7d17410108546991b92c93 SHA512 dcd6b61a0829c48c87ef3f7bce516e5d1caf2c8da97b28df7e6d1b2380fd7803cc3714836b3f38e649d1761894155579e22caa7a1595f212d7e4d4f2118d9e20 WHIRLPOOL 4ecd2b539d3c55e1f967f85a968387b76f91cc2a57bd21e246726140f437d162fbf592c431b8649b85bee94fd68970e95a9712d43f92cc4894c0610402b09a0f
 EBUILD snakeoil-0.5.2.ebuild 1520 SHA256 65239c4c8df30c64f9774ac4fe2f6de7bbef5622485c27575f26dba404ecd83a SHA512 4814cbeb14d6c5165ca71feb0e49f7c67c68a0bf42e80f8155b4ba8c53339fc99a8295f1b6d78aea52f62f46354e8f4c43dafb7ad74522a546dd453fcea93bf0 WHIRLPOOL 696916c4e27babe3fd15341826a6a8e84ec3937115b289f2a8dc8afe50852086aef32e3adc54266c0c32f242b452d85ee2457f1460353ba9068a135d54eb4f9e
 EBUILD snakeoil-0.5.3.ebuild 841 SHA256 fa634ad083bc9c78b9f7b3af3164b4b60733c0f8a07f47616a34e1249476463c SHA512 6c41b5ba02e0634630532f69936df0cc7a24f1533168318df1761a11477495edabec8be6c0da8cea878c9ced70d52d8cd275f66ff2df2f38b7dc1e2477499cbf WHIRLPOOL 8cf364d1fa7b11d074a797daed2118ad6b9ecbed7fa5a9be77d45221ef8645d916131c743bd6ce0440223dded887ad1e30a1292a07dcb885f35472460bdf222a
-EBUILD snakeoil-9999.ebuild 858 SHA256 36b6f4b3e442a64abdff17bb5de3075d48ae562937ed5ba17507208a73e6cae6 SHA512 8ae077c5182784d4604966d9c57b68e8108688196a29783d764407cddb03c68f0530951924de37c685fdb8eeb4336afdd014c5094d464e02dfdf9522831ee6fb WHIRLPOOL 5d63c4ed5efa96c1bc62ae4be59fab47748510da779b63f42e90d8b0729ab3bc892d5a61f8c591e12ba4ec16ea793cebe9778ec644382ffba426a18b572ffbb3
-MISC ChangeLog 10580 SHA256 02b683876faff21ff78aea806e02f761aceb89b7d48bdf3ff032a4d4c3fb1b2b SHA512 6bc30ebbf454ba13b7a71cb66eaafd193930365d7e0008b2d811d22f1026fea962b95b933f60b98964c31f630b8505ce8cee6ba1168750e63bae0c411bcd8540 WHIRLPOOL af600062e5f743957fc9dcab06ed792840d20f60f1e20c91ab09f9011aa0fa2625ebe9bc4b4a617302ce491c487c7f4bcc714fdd922fc8db93e7630b43e27e11
+EBUILD snakeoil-9999.ebuild 865 SHA256 01cfd54aca059d25336bc3dff452f018b0f2601669dde050d4a8628d3a69bdcf SHA512 69d52d6c72cf4a3ac586d9029a0bbb1cb5eb345d475365199ed35a8185ab419c571659cd56386a8f028027c2271520a630a3523eb2023810388934146a887789 WHIRLPOOL df6eed12cbb0fcfe66f45b28713a9ad5ab927a3a9e5ef163e05367aee243d367c05a3e450394e77ad957e397a743372b17c33f1ced5e2e0a6e5320ca62132c6b
+MISC ChangeLog 10717 SHA256 119ca603c56c02e94fc1f5f47c5ae9dd64dcc53a5617f1ffcb622ec70092407b SHA512 0ee6f5ac6dc4a8a63235f5dcbf1708e1167d0349bfc824b2d52db86e1c21135ebc6a5389fd094f59dec420c036b8231a4af7bc0fd11c51da0a1a8741395d6ce2 WHIRLPOOL 25e9c1c638dce1786e29923f500a513a5bbdd935bb6c6050cea6ebb8fc16c6c67d187a5f60df7b0ec5cbed7e2bd894d0ee18f921c170c688edd3831480326f9e
 MISC metadata.xml 402 SHA256 f25be5dbcb069b955462bc72031edc42ce87d1107b0e7c3f9507aa853f4f5cef SHA512 8b68d45f6d162658e1eb6393078f29f057d431067a8545c2aacc3e42d29cb209aeb6dd5a6a092a25d704269f50bcf4b3ebf474d6917e2ce253745c8e245b1083 WHIRLPOOL dbe46ba4ed1a6655ff756b8cf3780bfbbf7cdf46316fb1ae884013518fcd0d15610419da4eb079e754e903e95de09f56496483020ade5a58a4b5ee23c655dd74
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQJ8BAEBCABmBQJScVxXXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCABmBQJTFvzLXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
-MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOQd4QAILDwyjrYUKKuyfX973ITNNY
-4fQKp8VyDcrZxfmPrhGghMQb1h1a6uX4nwx01ERr/5zjLOPEg+6XjhXKC1Y/IPe4
-1w9mIGsbMktWzxZcqHKaqACvOJWTmyey/8pYtFF/qCnFw3y+vpMjyfSI8tI8CMvR
-Bep5H61csgrfLmOYwG1qBS/9B7DI/nJinw0yB964cFddTC7ovKIP4BKZUrapJVNt
-997qqKj0qHSU51cvEYYFuahas7N6gMOmTQKArQL62YOREvrammXQ4obvFz6kw2Nq
-EZG/jwEfjBH9GDZP/SUuf+ZpUtOE5MPMQiI6EmaF1ZJGFD0vtUkhXgNgQykB6cEJ
-y19U+Lx/HUi5b9fY8cm/zCjfj8Iv3IiT696SrY9pEUUF34PQqRofS8OHxXbQnEUk
-LdjZMSPc1JmXp7jPDKnwBZnbZhunE+YQsl7oNmAyfpou70NrunFnvX1JQK7wPWCL
-+u6LZt77U4PaGPjDQ+GeLTaTdLDWGW55NBk3+8xlB+96gHLwjPV4Or3z2G5liGiP
-QhgoUSqSUj+dyGIAB2k+hkUJa9HFyp8Crhaqqm8kjlf7PFZseNB9ixP+VxqMNjJP
-0HZ4fCUm8ZTTCbdytG6F7Lo4cb6YEkOCSJ6KfgDXi6ipiFzYiY8W7PIU9vNP4vec
-7AA5ua16c4wUnT6AIrNA
-=fCOj
+MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOgUkP/R0P0kAsIBopgFMPdL4ItKJl
+tA4NdvoGushtOL0AEvb/CZSofmVm0AelZ+Kxvrh4YCvga6xi893WZXN6PUGzd4YE
+/gnW0eHQxKu60cH0276Z4pDJa9cnCT31wAGy7GbaOgT3RimMqJ1orrEjDkGc5GDm
+XXU7fr/XanKBU8vKGVYaREeuSjjlEJJCCrbyeWigW3+VFuiRWkTgIgcuWZMl/lL6
+K1llyWETJ4q0DtRnshmYzEA0MdIHEL55GYhDQD7dUGE+nsT5Kv8ByoaAjg7KscTh
+0f8lv6qj8c2RQ+hCLEqyNNWkCBwfergcRUYJ6OhJSIOenWycxux+urPKK37jTSLE
+Ae/tSzfNJ1RtQ675IhGHFHsHmmROcokQHmo++IJ5iK75jm/lesceGToCo+hgPe7T
+5h2tX1NoPFUPUc7yajr/ewi+yrsX6DMGzDY0dqKOc3HT8zwpO/x8itQY74e4BsbN
+zVF3PBa3ak1F7lgWXeSD3F2g08Io9fZADkso/dR2EhvKo/J3TdAmxbt5iY16aTHV
+1kZaJ532R4a0Qz2ZB4aGlmAyNnJ7PCAXXnNRWfB2Z+fLNAEGW2a1QI2uevc4R+AM
+JIQr6E2UC+PPzPhIO3qJg6qoUMPzcvS45e0k1GoiMbuMhZfNPkEKOO5aHigM2M8J
+R/WMpv3WQqepbTVECFbj
+=mV3+
 -----END PGP SIGNATURE-----
