@@ -1,6 +1,6 @@
-# Copyright 1999-2013 Gentoo Foundation
+# Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/snakeoil/snakeoil-9999.ebuild,v 1.8 2013/09/26 12:13:25 hasufell Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/snakeoil/snakeoil-9999.ebuild,v 1.9 2014/03/05 10:30:26 mgorny Exp $
 
 EAPI=4
 PYTHON_COMPAT=( python{2_6,2_7,3_2,3_3} )
@@ -8,7 +8,7 @@ inherit distutils-r1
 
 if [[ ${PV} == *9999 ]] ; then
 	EGIT_REPO_URI="https://code.google.com/p/snakeoil/"
-	EGIT_NONSHALLOW=1
+	EGIT_MIN_CLONE_TYPE=single
 	inherit git-r3
 else
 	KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86"
